--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Trackify</string>
     <string name="title">Hello</string>
     <string name="desc">6/6 Tasks</string>
+    <string name="today_s_task">Today\'s Tasks</string>
 </resources>
