--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="desc">6/6 Tasks</string>
     <string name="today_s_task">Today\'s Tasks</string>
     <string name="no_tasks">No Tasks</string>
+    <string name="edit_task">Edit Task</string>
+    <string name="add_task">Add Task</string>
+    <string name="start_time">Start Time</string>
+    <string name="end_time">End Time</string>
+    <string name="reminder">Reminder</string>
 </resources>
