--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="start_time">Start Time</string>
     <string name="end_time">End Time</string>
     <string name="reminder">Reminder</string>
+    <string name="what_would_you_like_to_do">What would you like to do?</string>
 </resources>
