--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="end_time">End Time</string>
     <string name="reminder">Reminder</string>
     <string name="what_would_you_like_to_do">What would you like to do?</string>
+    <string name="update_task">Update Task</string>
 </resources>
